# resistance-retention-viewer

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
Resistance Viewer.app/Contents/: Info.plist
Resistance Viewer.app/Contents/MacOS/: Resistance Viewer
Resistance Viewer.app/Contents/Resources/: launch.sh  launch_viewer.sh
Resistance Viewer.app/Contents/Resources/app/: requirements.txt
Resistance Viewer.app/Contents/Resources/app/src/resistance_viewer/: __init__.py  app.py
Resistance Viewer.app/Contents/_CodeSignature/: CodeDirectory  CodeResources
docs/: TECHNICAL.md
scripts/: launch_viewer.sh  register_app.sh  repair_viewer.sh
src/resistance_viewer/: app.py
windows/app/src/resistance_viewer/: app.py
