[project]
name = "resistance-retention-viewer"
version = "0.1.0"
description = "Streamlit app to plot resistance retention from wide CSV files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.28.0",
  "pandas>=2.0.0",
  "plotly>=5.18.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
